# dna-sequencing

./: pyproject.toml  readme.md  results.csv
dna_sequencing/: __main__.py  csv.py
dna_sequencing/graph/: graph.py  vertex.py
dna_sequencing/greedy/: greedy.py
dna_sequencing/simulated_annealing/: optimalization.py  simulated_annealing.py
dna_sequencing/solution/: solution_container.py
dna_sequencing/utils/: file_handing.py
