[tool.poetry]
name = "dna-sequencing"
version = "0.1.0"
description = ""
authors = [
    "mateusz-świercz < mateusz.swiercz@student.put.poznan.pl >",
    "mikolaj-skrzypczak < mikolaj.m.skrzypczak@student.put.poznan.pl >"]
packages = [
    { include = "dna_sequencing" },
]

[tool.poetry.scripts]
dna_sequencing = "dna_sequencing.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
